--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   flask-app:
-    image: tanisha123/todoapp:latest  # Change this to match the name and tag of your built Flask image
+    image: tanisha123/todoapp:rolling  # Change this to match the name and tag of your built Flask image
     ports:
       - "5001:5000"  # Map port 5000 on the host to port 5000 on the container
     depends_on:
